--- a/assets/resource/pipeline/beast.json
+++ b/assets/resource/pipeline/beast.json
@@ -5,8 +5,8 @@
         ],
         "interrupt": [
             "关闭礼包",
-            "后退",
-            "转到城外"
+            "转到城外",
+            "后退"
         ]
     },
     "自动野兽_点击放大镜": {
