--- a/assets/resource/pipeline/beast.json
+++ b/assets/resource/pipeline/beast.json
@@ -1,12 +1,10 @@
 {
     "自动野兽_入口": {
         "next": [
-            "自动野兽_点击放大镜"
-        ],
-        "interrupt": [
-            "关闭礼包",
-            "转到城外",
-            "后退"
+            "自动野兽_点击放大镜",
+            "[JumpBack]关闭礼包",
+            "[JumpBack]转到城外",
+            "[JumpBack]后退"
         ]
     },
     "自动野兽_点击放大镜": {
@@ -30,10 +28,8 @@
     },
     "自动野兽_确定野兽位置": {
         "next": [
-            "自动野兽_识别野兽"
-        ],
-        "interrupt": [
-            "自动集结_滑动到左边"
+            "自动野兽_识别野兽",
+            "[JumpBack]自动集结_滑动到左边"
         ]
     },
     "自动野兽_识别野兽": {
