--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -81,7 +81,7 @@ jobs:
         with:
           repository: MaaXYZ/MaaFramework
           fileName: "MAA-win-${{ matrix.arch }}*"
-          tag: "v5.2.6"
+          tag: "v5.3.0-beta.4"
           out-file-path: "deps"
           extract: true
 
@@ -147,7 +147,7 @@ jobs:
         with:
           repository: MaaXYZ/MaaFramework
           fileName: "MAA-macos-${{ matrix.arch }}*"
-          tag: "v5.2.6"
+          tag: "v5.3.0-beta.3"
           out-file-path: "deps"
           extract: true
 
