--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -2,6 +2,12 @@ on:
   push:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+*"
+    branches:
+      - "**"
+    paths:
+      - ".github/workflows/install.yml"
+      - "assets/**"
+      - "**.py"
   pull_request:
     branches:
       - "**"
@@ -10,9 +16,10 @@ on:
       - "assets/**"
       - "**.py"
   workflow_dispatch:
+
 env:
-  MAA_FRAMEWORK_VERSION: "v5.3.3"
-  MFAA_VERSION: "v2.5.0"
+  MAA_FRAMEWORK_VERSION: "v5.4.2"
+  MFAA_VERSION: "v2.5.6"
 
 permissions:
   contents: write
@@ -43,7 +50,7 @@ jobs:
             tag=$(date "+$tag-%y%m%d-$(git rev-parse --short HEAD)")
           fi
 
-          if ! $($is_release) ; then
+          if [ "$is_release" != "true" ] ; then
             prefix=${tag%-*-*}
             suffix=${tag#$prefix-}
             tag="$prefix-ci.$suffix"
@@ -79,6 +86,16 @@ jobs:
         with:
           submodules: true
 
+      - name: Set platform variables
+        id: platform
+        shell: bash
+        run: |
+          if [ "${{ matrix.arch }}" = "x86_64" ]; then
+            echo "tag=x64" >> $GITHUB_OUTPUT
+          else
+            echo "tag=arm64" >> $GITHUB_OUTPUT
+          fi
+
       - name: Download MaaFramework
         uses: robinraju/release-downloader@v1
         with:
@@ -93,7 +110,7 @@ jobs:
         uses: robinraju/release-downloader@v1
         with:
           repository: SweetSmellFox/MFAAvalonia
-          fileName: "MFAAvalonia-*-win-${{ matrix.arch == 'x86_64' && 'x64' || 'arm64' }}*"
+          fileName: "MFAAvalonia-*-win-${{ steps.platform.outputs.tag }}*"
           tag: ${{ env.MFAA_VERSION }}
           out-file-path: "MFA"
           extract: true
@@ -105,6 +122,28 @@ jobs:
           rm -f "${ARCHIVE_FILE_PATH}"
           echo "Archive cleanup command executed for MFAAvalonia on Windows."
 
+      - name: Convert PNG to ICO
+        if: matrix.arch == 'x86_64'
+        shell: bash
+        run: |
+          # 安装 ImageMagick
+          choco install imagemagick -y
+
+          # 转换 PNG 到 ICO
+          magick convert assets/logo.png -define icon:auto-resize=256,128,64,48,32,24,16 mwjdr.ico
+
+      - name: Modify MFAAvalonia exe icon
+        if: matrix.arch == 'x86_64'
+        shell: bash
+        run: |
+          # 下载 rcedit
+          curl -L https://github.com/electron/rcedit/releases/download/v2.0.0/rcedit-x64.exe -o rcedit.exe
+
+          # 修改 exe 图标
+          ./rcedit.exe "MFA/MFAAvalonia.exe" --set-icon "mwjdr.ico"
+
+          echo "MFAAvalonia icon modified successfully"
+
       - name: Setup Embed Python on Windows
         shell: bash
         run: |
@@ -115,10 +154,31 @@ jobs:
         run: |
           ./install/python/python.exe tools/ci/download_deps.py --deps-dir install/deps
 
+      - name: Download drop_core module
+        shell: bash
+        env:
+          PRIVATE_REPO_TOKEN: ${{ secrets.PRIVATE_REPO_TOKEN }}
+        run: |
+          ./install/python/python.exe tools/ci/download_drop_core.py --os windows --arch ${{ matrix.arch }} || echo "drop_core download skipped"
+
       - name: Install
         shell: bash
         run: |
-          ./install/python/python.exe ./tools/ci/install.py ${{ needs.meta.outputs.tag }}
+          PLATFORM_TAG="win-${{ steps.platform.outputs.tag }}"
+          ./install/python/python.exe ./tools/ci/install.py ${{ needs.meta.outputs.tag }} $PLATFORM_TAG
+          cp -rpvn tools/registry/. install/
+
+      - name: Create CLI version
+        shell: bash
+        run: |
+          ./install/python/python.exe ./tools/ci/install_cli.py ${{ needs.meta.outputs.tag }}
+          cp -rpvn tools/registry/. install-cli/
+          cp -rpvn install/python/. install-cli/python/
+          rm -rf install-cli/deps 2>/dev/null || true
+
+      - name: Copy MFA files to main version
+        shell: bash
+        run: |
           if [ -d "MFA" ]; then
             echo "Copying MFA files to install directory..."
             mkdir -p install
@@ -127,10 +187,30 @@ jobs:
             echo "MFA directory not found, skipping copy."
           fi
 
+      - name: Replace Assets with custom assets folder
+        shell: bash
+        run: |
+          # 删除大写的 Assets 文件夹
+          if [ -d "install/Assets" ]; then
+            rm -rf install/Assets
+            echo "Removed original Assets folder"
+          fi
+
+          # 创建小写的 assets 文件夹
+          mkdir -p install/assets
+
+          # 如果有自定义图标，复制并重命名为 logo.ico
+          if [ -f "mwjdr.ico" ]; then
+            cp mwjdr.ico install/assets/logo.ico
+            echo "Copied custom icon to assets/logo.ico"
+          fi
+
       - uses: actions/upload-artifact@v4
         with:
-          name: MWJDR-win-${{ matrix.arch }}
+          name: MWJDR-win-${{ matrix.arch }}-${{ needs.meta.outputs.tag }}-Full
           path: "install"
+
+
   macos:
     needs: meta
     strategy:
@@ -144,6 +224,16 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
+
+      - name: Set platform variables
+        id: platform
+        shell: bash
+        run: |
+          if [ "${{ matrix.arch }}" = "x86_64" ]; then
+            echo "tag=x64" >> $GITHUB_OUTPUT
+          else
+            echo "tag=arm64" >> $GITHUB_OUTPUT
+          fi
 
       - name: Download MaaFramework for macOS
         uses: robinraju/release-downloader@v1
@@ -159,7 +249,7 @@ jobs:
         uses: robinraju/release-downloader@v1
         with:
           repository: SweetSmellFox/MFAAvalonia
-          fileName: "MFAAvalonia-*-osx-${{ matrix.arch == 'x86_64' && 'x64' || 'arm64' }}*"
+          fileName: "MFAAvalonia-*-osx-${{ steps.platform.outputs.tag }}*"
           tag: ${{ env.MFAA_VERSION }}
           out-file-path: "MFA"
           extract: true
@@ -170,6 +260,15 @@ jobs:
           ARCHIVE_FILE_PATH="${{ fromJson(steps.download_mfa.outputs.downloaded_files)[0] }}"
           rm -f "${ARCHIVE_FILE_PATH}"
           echo "Archive cleanup command executed for MFAAvalonia on macOS."
+
+      - name: Convert PNG to ICO
+        shell: bash
+        run: |
+          # 安装 ImageMagick（如果未安装）
+          brew install imagemagick
+
+          # 转换 PNG 到 ICO
+          magick convert assets/logo.png -define icon:auto-resize=256,128,64,48,32,24,16 mwjdr.ico
 
       - name: Setup Embed Python on macOS
         shell: bash
@@ -186,15 +285,33 @@ jobs:
       - name: Download Python dependencies
         shell: bash
         run: |
-          ./install/python/bin/python3 tools/ci/download_deps.py --deps-dir deps
+          ./install/python/bin/python3 tools/ci/download_deps.py --deps-dir install/deps
+
+      - name: Download drop_core module
+        shell: bash
+        env:
+          PRIVATE_REPO_TOKEN: ${{ secrets.PRIVATE_REPO_TOKEN }}
+        run: |
+          ./install/python/bin/python3 tools/ci/download_drop_core.py --os darwin --arch ${{ matrix.arch }} || echo "drop_core download skipped"
 
       - name: Install on macOS
         shell: bash
         run: |
           PYTHON_EXECUTABLE="./install/python/bin/python3"
+          PLATFORM_TAG="osx-${{ steps.platform.outputs.tag }}"
           echo "Using Python executable: $PYTHON_EXECUTABLE for macOS"
-          $PYTHON_EXECUTABLE ./tools/ci/install.py ${{ needs.meta.outputs.tag }}
+          $PYTHON_EXECUTABLE ./tools/ci/install.py ${{ needs.meta.outputs.tag }} $PLATFORM_TAG
 
+      - name: Create CLI version
+        shell: bash
+        run: |
+          ./install/python/bin/python3 ./tools/ci/install_cli.py ${{ needs.meta.outputs.tag }}
+          cp -rpvn install/python/. install-cli/python/
+          rm -rf install-cli/deps 2>/dev/null || true
+
+      - name: Copy MFA files to main version
+        shell: bash
+        run: |
           if [ -d "MFA" ]; then
             echo "Copying MFA files to install directory on macOS..."
             mkdir -p install
@@ -203,13 +320,32 @@ jobs:
             echo "MFA directory not found on macOS, skipping copy."
           fi
 
+      - name: Replace Assets with custom assets folder
+        shell: bash
+        run: |
+          # 删除大写的 Assets 文件夹
+          if [ -d "install/Assets" ]; then
+            rm -rf install/Assets
+            echo "Removed original Assets folder"
+          fi
+
+          # 创建小写的 assets 文件夹
+          mkdir -p install/assets
+
+          # 如果有自定义图标，复制并重命名为 logo.ico
+          if [ -f "mwjdr.ico" ]; then
+            cp mwjdr.ico install/assets/logo.ico
+            echo "Copied custom icon to assets/logo.ico"
+          fi
+
       - uses: actions/upload-artifact@v4
         with:
-          name: MWJDR-macos-${{ matrix.arch }}
+          name: MWJDR-macos-${{ matrix.arch }}-${{ needs.meta.outputs.tag }}-Full
           path: "install"
 
   changelog:
     name: Generate changelog
+    needs: meta
     runs-on: ubuntu-latest
     outputs:
       release_body: ${{ steps.git-cliff.outputs.content }}
@@ -224,14 +360,18 @@ jobs:
         id: git-cliff
         with:
           config: .github/cliff.toml
-          args: -vv --latest --strip header
+          # 正式版：使用 tag-pattern 只匹配正式版标签，包含所有从上一个正式版以来的提交
+          # 预发布版：正常生成，只包含从上一个标签以来的提交
+          args: >-
+            -vv --latest --strip header
+            ${{ needs.meta.outputs.is_prerelease == 'false' && '--tag-pattern "^v[0-9]+\\.[0-9]+\\.[0-9]+$"' || '' }}
         env:
           OUTPUT: CHANGES.md
           GITHUB_REPO: ${{ github.repository }}
 
   release:
     if: ${{ needs.meta.outputs.is_release == 'true' }}
-    needs: [meta, windows, macos, changelog]
+    needs: [meta, windows, linux, macos, changelog]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v4
@@ -243,26 +383,21 @@ jobs:
           cd assets
           for f in *; do
             if [[ $f == *"win"* ]]; then
-              (cd $f && zip -r ../$f-${{ needs.meta.outputs.tag }}.zip .)
+              (cd "$f" && zip -r "../$f.zip" .)
             else
               echo "Processing Unix artifact: $f"
 
-              # 为主要可执行文件设置权限
-              # MaaPiCli
               if [[ -f "$f/MaaPiCli" ]]; then
-                chmod +x $f/MaaPiCli
+                chmod +x "$f/MaaPiCli"
                 echo "Set execute permission for $f/MaaPiCli"
               fi
 
-              # MFAAvalonia
-              find $f -type f -name "MFAAvalonia*" -exec chmod +x {} \; 2>/dev/null || true
+              find "$f" -type f -name "MFAAvalonia*" -exec chmod +x {} \; 2>/dev/null || true
               echo "Set execute permission for all MFAAvalonia files"
 
-              # MFAUpdater
-              find $f -type f -name "MFAUpdater*" -exec chmod +x {} \; 2>/dev/null || true
+              find "$f" -type f -name "MFAUpdater*" -exec chmod +x {} \; 2>/dev/null || true
               echo "Set execute permission for all MFAUpdater files"
 
-              # 为Python解释器设置执行权限 (处理不同可能的路径)
               PYTHON_PATHS=(
                 "$f/python/bin/python3"
                 "$f/python/python"
@@ -276,9 +411,8 @@ jobs:
                 fi
               done
 
-              # 使用带有'p'标志的tar命令来保留权限
-              tar -cpzf $f-${{ needs.meta.outputs.tag }}.tar.gz -C $f .
-              echo "Created archive with preserved permissions: $f-${{ needs.meta.outputs.tag }}.tar.gz"
+              tar -cpzf "$f.tar.gz" -C "$f" .
+              echo "Created archive with preserved permissions: $f.tar.gz"
             fi
           done
 
@@ -289,3 +423,11 @@ jobs:
           body: ${{ needs.changelog.outputs.release_body }}
           draft: false
           prerelease: ${{ needs.meta.outputs.is_prerelease == 'true' }}
+
+      - name: Trigger MirrorChyanUploading
+        shell: bash
+        run: |
+          gh workflow run --repo $GITHUB_REPOSITORY mirrorchyan.yml -f tag=${{ needs.meta.outputs.tag }}
+          gh workflow run --repo $GITHUB_REPOSITORY mirrorchyan_release_note.yml -f tag=${{ needs.meta.outputs.tag }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
