chore: 修改maa和mfa版本

--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -371,7 +371,7 @@ jobs:
 
   release:
     if: ${{ needs.meta.outputs.is_release == 'true' }}
-    needs: [meta, windows, linux, macos, changelog]
+    needs: [meta, windows, macos, changelog]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/download-artifact@v4
